--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@copilotkit/backend": "^0.37.0",
+    "@copilotkit/react-core": "^0.37.0",
+    "@copilotkit/react-textarea": "^0.37.0",
+    "@copilotkit/react-ui": "^0.37.0",
+    "@heroicons/react": "^2.1.4",
+    "next": "14.2.4",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-spreadsheet": "^0.9.5",
+    "scheduler": "^0.23.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
